# beta_cell_analysis_roi_picker

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  RoiPicker.spec  RoiPicker_macos.spec  RoiPicker_win.exe.config  RoiPicker_win.spec  inno_setup_script.iss  package-lock.json  package.json  pyinstaller_command.txt  pyproject.toml  run.py  run_prod.py  vite.config.js
backend/: __init__.py  configs.py  extensions.py
backend/api/files/: __init__.py  controller.py  lif_handlers.py  schemas.py
backend/api/preferences/: __init__.py  controller.py  schemas.py
backend/api/quick_notes/: __init__.py  controller.py
backend/api/roi/: __init__.py  controller.py  schemas.py
backend/gui/: __init__.py  controller.py
backend/islet/: __init__.py  islet.py  types.py
backend/static/app/: index.html
backend/static/app/assets/: index.js
backend/static/css/: styles.css
backend/templates/: index.html  video.html
backend/utilities/: __init__.py  loguru_setup.py  singleton.py  types.py  utils.py
frontend/: index.html  index.js
frontend/app/: app.js  elements.js  properties.js  routes.js
frontend/app/components/: aboutInfo.js  basicUsageTab.js  citationTab.js  configurationsOffcanvas.js  contactTab.js  issuesTab.js  licenseTab.js  quickNotesOffcanvas.js  singlePlot.js  tsPlot.js  uploadDropZone.js  videoPlayer.js
frontend/app/extensions/: messenger.js
frontend/app/layout/: baseLayout.js  menuElement.js
frontend/app/pages/: documentationPage.js  homePage.js
frontend/app/utilities/: backend.js  spinner.js
