[project]
name = "beta-cell-analysis-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "bleach>=6.2.0",
    "imageio[ffmpeg]>=2.37.0",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyeditorjs>=1.0.0b0",
    "pyjolt[desktop-ui]>=0.9.12",
    "pyside6>=6.9.0",
    "pywebview>=5.4",
    "qtpy>=2.4.3",
    "readlif>=0.6.5",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
